objects/VisitOps__Company__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Account_Owner_formula__c</fullName>
        <formula>VisitOps__Account__r.Owner.VisitOps__Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Account Owner for the related Salesforce Account.</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Account_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Type = Customer Visit</description>
        <inlineHelpText>Displays the name of the Salesforce Account that is connected to the visit (if any).</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__AddAsNewAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add As New Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Annual_Revenue_Formula__c</fullName>
        <formula>VisitOps__Account__r.AnnualRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c  )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__City_formula__c</fullName>
        <formula>VisitOps__Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Company_Annual_Revenue__c</fullName>
        <inlineHelpText>Displays the Annual Revenue for the related Account (if any).  Automatically updates if changes are made in the Account record.  Also stores annual revenue for non-Salesforce Accounts.  Used on Visit Detail and Visit Package.</inlineHelpText>
        <label>Company Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__Company_Industry__c</fullName>
        <inlineHelpText>Displays the Industry for the related Account (if any).  Automatically updates if changes are made in the Account record.  Also stores the Industry for non-Salesforce Accounts.  Used on Visit Detail and Visit Package.</inlineHelpText>
        <label>Company Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the Account name for the related Account (if any).  Automatically updates if changes are made in the Account record.  Also stores company names for non-Salesforce Accounts.  Used on Visit Detail, Visit Package and agendas.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Company_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the website for the related Account (if any).  Automatically updates if changes are made in the Account record.  Also stores the website for non-Salesforce Accounts.  Used on Visit Detail and Visit Package.</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c  )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Industry_Formula__c</fullName>
        <formula>text(VisitOps__Account__r.Industry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Industry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationId__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ObjectiveForThisAccount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the visit objectives for this company.  Used on Visit Detail and Visit Package.</inlineHelpText>
        <label>Objective for this Company</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies (Parent Account)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Salesforce_Account_ID__c</fullName>
        <formula>VisitOps__Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__State_Province_Formula__c</fullName>
        <formula>VisitOps__Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__State_Province__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Ticker_Symbol_Formula__c</fullName>
        <formula>VisitOps__Account__r.TickerSymbol</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticker Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Ticker_Symbol__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ticker Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VO_Account_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitArrivalDateTimeTZ__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c</formula>
        <label>Visit Arrival Date and Time(Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitArrivalDateTime__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTime__c</formula>
        <label>Visit Arrival Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitDepartureDateTimeTZ__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c</formula>
        <label>Visit Departure Date and Time(Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitDepartureDateTime__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTime__c</formula>
        <label>Visit Departure Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitManagerNameFormula__c</fullName>
        <description>This field will have the name of the manager of Visit.</description>
        <formula>VisitOps__Visit__r.VisitOps__VisitManagerName__c</formula>
        <label>Visit Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitNameFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitOwnerFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitOwner__r.FirstName + &apos; &apos; + VisitOps__Visit__r.VisitOps__VisitOwner__r.LastName</formula>
        <label>Visit Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitStatusFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTypeFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitType__r.Name</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Accounts/Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Website_Formula__c</fullName>
        <formula>VisitOps__Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__Zip_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip/Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Company_Name__c</columns>
        <columns>VisitOps__Company_Website__c</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__VisitArrivalDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Company Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>